--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          </nav>
          <section class="hero">
             <div class="hero-content">
-                <h1>Site Title Here</h1>
+                <h1>Hello Class!</h1>
                 <p>site subtitle here</p>
             </div>
          </section>
